<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_gpiod</name>
  <version>2.0.1</version>
  <description>libgpiod wrapper for Panther</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <author email="pawel.kowalski@husarion.com">Paweł Kowalski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>panther_utils</depend>

  <build_depend>autoconf</build_depend>
  <build_depend>autoconf-archive</build_depend>
  <build_depend>libtool</build_depend>
  <build_depend>m4</build_depend>
  <build_depend>pkg-config</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
